--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Akhtar Munir, PhD Student
 markdown: kramdown
 
-permalink: /blog/:year/:month/:day/:title
+# permalink: /blog/:year/:month/:day/:title
